Ellipsis text when branch selector gets too narrow. Fixes #4964

--- a/webviews/createPullRequestViewNew/index.css
+++ b/webviews/createPullRequestViewNew/index.css
@@ -56,6 +56,9 @@ svg path {
 	padding-top: 2px;
 	padding-left: 8px;
 	text-align: left;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .merge {
